chore: create package directories and requirements
Needs to be done to be a usable package.

--- a/bravado_api.ipynb
+++ b/bravado_api.ipynb
@@ -17,8 +17,12 @@
     "from bravado.client import SwaggerClient\n",
     "\n",
     "cbioportal = SwaggerClient.from_url(\n",
-    "    'https://www.cbioportal.org/api/v2/api-docs',\n",
-    "    config={\"validate_requests\": False, \"validate_responses\": False, \"validate_swagger_spec\":False}\n",
+    "    \"https://www.cbioportal.org/api/v2/api-docs\",\n",
+    "    config={\n",
+    "        \"validate_requests\": False,\n",
+    "        \"validate_responses\": False,\n",
+    "        \"validate_swagger_spec\": False,\n",
+    "    },\n",
     ")\n",
     "\n",
     "print(cbioportal)"
@@ -50,38 +54,9 @@
    ],
    "source": [
     "mutations = cbioportal.Mutations.getMutationsInMolecularProfileBySampleListIdUsingGET(\n",
-    "    molecularProfileId='msk_impact_2017_mutations',\n",
-    "    sampleListId='msk_impact_2017_all'\n",
+    "    molecularProfileId=\"msk_impact_2017_mutations\", \n",
+    "    sampleListId=\"msk_impact_2017_all\"\n",
     ").result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hi = mutations[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'P-0000004'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hi.patientId"
    ]
   },
   {
