--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,23 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.7 s, sys: 225 ms, total: 1.93 s\n",
-      "Wall time: 30 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mutations = cbioportal.Mutations.getMutationsInMolecularProfileBySampleListIdUsingGET(\n",
-    "    molecularProfileId=\"msk_impact_2017_mutations\", \n",
-    "    sampleListId=\"msk_impact_2017_all\"\n",
-    ").result()"
+    "    molecularProfileId=\"msk_impact_2017_mutations\",\n",
+    "    sampleListId=\"msk_impact_2017_all\",\n",
+    "    projection=\"DETAILED\",\n",
+    ").result()\n",
+    "patients = cbioportal.Patients.getAllPatientsInStudyUsingGET(studyId=\"msk_impact_2017\").result()"
    ]
   },
   {
