docs: simplifying example_notebook

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -2,54 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SwaggerClient(https://www.cbioportal.org/api)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from bravado.client import SwaggerClient\n",
+    "import pandas as pd\n",
     "\n",
-    "cbioportal = SwaggerClient.from_url(\n",
-    "    \"https://www.cbioportal.org/api/v2/api-docs\",\n",
-    "    config={\n",
-    "        \"validate_requests\": False,\n",
-    "        \"validate_responses\": False,\n",
-    "        \"validate_swagger_spec\": False,\n",
-    "    },\n",
-    ")\n",
-    "\n",
-    "print(cbioportal)"
+    "from cbiotorch.data import MutationDataset\n",
+    "from cbiotorch.transform import ToPandas, ToPandasCountMatrix\n",
+    "from cbiotorch.cbioportal import MutationModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "studies = cbioportal.Studies.getAllStudiesUsingGET().result()\n",
-    "cancer_types = cbioportal.Cancer_Types.getAllCancerTypesUsingGET().result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mutations = cbioportal.Mutations.getMutationsInMolecularProfileBySampleListIdUsingGET(\n",
-    "    molecularProfileId=\"msk_impact_2017_mutations\",\n",
-    "    sampleListId=\"msk_impact_2017_all\",\n",
-    "    projection=\"DETAILED\",\n",
-    ").result()\n",
-    "patients = cbioportal.Patients.getAllPatientsInStudyUsingGET(studyId=\"msk_impact_2017\").result()"
+    "msk_mutations = MutationDataset(\"msk_impact_2017\")"
    ]
   },
   {
