docs: simplify example notebook

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import torch\n",
     "\n",
     "from cbiotorch.data import MutationDataset\n",
     "from cbiotorch.transform import ToPandas, ToPandasCountMatrix\n",
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
