docs: update example notebook

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -6,12 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import torch\n",
-    "\n",
     "from cbiotorch.data import MutationDataset\n",
-    "from cbiotorch.transform import ToPandas, ToPandasCountMatrix\n",
-    "from cbiotorch.cbioportal import MutationModel"
+    "from cbiotorch.transform import ToSparseCountTensor"
    ]
   },
   {
@@ -20,7 +16,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "msk_mutations = MutationDataset(\"msk_impact_2017\")"
+    "transform_sparse = ToSparseCountTensor([\"hugoGeneSymbol\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msk_mutations = MutationDataset(study_id=\"msk_impact_2017\", transform=transform_sparse)\n",
+    "msk_mutations.write(replace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(indices=tensor([[ 0,  9,  5,  8, 11,  2,  3,  6, 10,  1,  7,  4, 13, 12]]),\n",
+       "       values=tensor([1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1]),\n",
+       "       size=(14,), nnz=14, layout=torch.sparse_coo)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msk_mutations.__getitem__(0)"
    ]
   },
   {
