docs: update example notebook

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from cbiotorch.data import MutationDataset\n",
-    "from cbiotorch.transform import ToSparseCountTensor"
+    "from cbiotorch.transforms import ToSparseCountTensor"
    ]
   },
   {
