docs: simplify example notebooks

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -2,32 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torch.utils.data import DataLoader\n",
+    "\n",
     "from cbiotorch.data import MutationDataset\n",
     "from cbiotorch.transforms import ToSparseCountTensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform_sparse = ToSparseCountTensor([\"hugoGeneSymbol\"])"
+    "msk_mutations = MutationDataset(study_id=\"msk_impact_2017\")\n",
+    "msk_mutations.write(replace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "msk_mutations = MutationDataset(study_id=\"msk_impact_2017\", transform=transform_sparse)\n",
-    "msk_mutations.write(replace=True)"
+    "transform_sparse = ToSparseCountTensor(\n",
+    "    dims=[\"hugoGeneSymbol\", \"variantType\"], dim_refs=msk_mutations.auto_dim_ref\n",
+    ")\n",
+    "msk_mutations.add_transform(transform_sparse)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 64\n",
+    "msk_dataloader = DataLoader(msk_mutations, batch_size=batch_size, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
