docs: add tmb_mskcc_2018 dataset to example notebooks

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 64\n",
-    "msk_dataloader = DataLoader(msk_mutations, batch_size=batch_size, shuffle=True)"
+    "tmb_mutations = MutationDataset(study_id=\"tmb_mskcc_2018\")\n",
+    "tmb_mutations.write(replace=True)"
    ]
   },
   {
