docs: add to example workflow notebook

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -92,7 +92,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In order to properly use mutation datasets, we have to apply various processing steps. These can occur at various stages in a workflow, but we achieve all of these using *transforms*. Transforms in `cbiotorch` come (unsurprisingly) from the `transforms` module, which is designed to behave similarly to the `torchvision` module of the same name. Broadly speaking, there are two stages at which we might employ them: at dataset initiating, where they are applied to the entire dataset as it is assembled (i.e. before it is written to file in the example use of `MutationDataset` above), and those applied only to individual samples during data loading in model training. We'll discuss more about the latter type of transform later on, and for now focus on situations where we want to "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Extracting clinical outcomes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training a model"
    ]
   },
   {
@@ -102,7 +116,6 @@
    "outputs": [],
    "source": [
     "from cbiotorch.transforms import ToSparseCountTensor\n",
-    "\n",
     "\n",
     "transform_sparse = ToSparseCountTensor(\n",
     "    dims=[\"hugoGeneSymbol\", \"variantType\"], dim_refs=msk_mutations.auto_dim_refs()\n",
